Add make links to login and registration buttons

--- a/templates/login.html
+++ b/templates/login.html
@@ -38,7 +38,7 @@
                     </button>
                     <div class="col s12 ">
                         <p>If you have not yet joined us you can <a href="{{ url_for('registration') }}"
-                                class="purple-text text-darken-4">Register Here</a></p>
+                                class="btn-small waves-effect waves-light purple lighten-1">Register Here</a></p>
                     </div>
                 </div>
             </div>
