--- a/templates/registration.html
+++ b/templates/registration.html
@@ -73,7 +73,7 @@
                         Register<i class="material-icons right">forward</i>
                     </button>
                     <p>If you have already joined us you can <a href="{{ url_for('login') }}"
-                        class="purple-text text-darken-4">Log in Here</a></p>
+                        class="btn-small waves-effect waves-light purple lighten-1">Log in Here</a></p>
 
                 </div>
             </div>
