--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -14,30 +14,30 @@
     <div class="row valign-wrapper center-align">
       <div class="input-field col s12">
         <i class="material-icons prefix">search</i>
-        <input type="text" name="query" id="query" minlength="3" class="validate" >
+        <input type="text" name="query" id="query" minlength="3" class="validate">
         <label for="query">Search by keyword</label>
       </div>
     </div>
-    
-    
-      <div class="row">
-        <div class="col s12 m8">
-          <h5>or</h5>
-    </div>
-    </div>
-<div class="row">
-  <div class="col s12 m8">
 
-    <!-- Code from Materialize.com for dropdown to select category to browse -->
-    <select id="category_search" name="category_search" class="validate">
-      <option value="" disabled selected>Choose a category to browse</option>
-      <option value="all">View all</option>
-      {% for category in categories %}
-      <option value="{{ category.category_name }}">{{ category.category_name }}</option>
-      {% endfor %}
-    </select>
-  </div>
-</div>
+
+    <div class="row">
+      <div class="col s12 m8">
+        <h5>or</h5>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col s12 m8">
+
+        <!-- Code from Materialize.com for dropdown to select category to browse -->
+        <select id="category_search" name="category_search" class="validate">
+          <option value="" disabled selected>Choose a category to browse</option>
+          <option value="all">View all</option>
+          {% for category in categories %}
+          <option value="{{ category.category_name }}">{{ category.category_name }}</option>
+          {% endfor %}
+        </select>
+      </div>
+    </div>
 
 
     <div class="row">
@@ -48,12 +48,15 @@
         <button type="submit" class="btn-small purple lighten-1"><i class="material-icons right">search</i>
           Search
         </button>
-        <a href="{{ url_for('get_technologies') }}" class="btn-small purple lighten-1"><i class="material-icons right">autorenew</i>Reset</a>
+        <a href="{{ url_for('get_technologies') }}" class="btn-small purple lighten-1"><i
+            class="material-icons right">autorenew</i>Reset</a>
       </div>
     </div>
   </form>
 </div>
 
+
+{% if technologies|length > 0 %}
 
 <!-- Code from Materialize.com for cards -->
 {% for technology in technologies %}
@@ -73,14 +76,15 @@
           <li>Worst bits: {{ technology.worst_bits }}</li>
           <li>Added by: {{ technology.added_by }}</li>
           <li>Date added: {{ technology.added_on }}</li>
-                  
+
         </ul>
       </div>
       <div class="card-action">
-        
-        <a href="{{ url_for('comments', technology_id=technology._id) }}" class="purple-text text-darken-4">Add or read the comments about the {{ technology.technology_name}}</a>
-        
-        
+
+        <a href="{{ url_for('comments', technology_id=technology._id) }}" class="purple-text text-darken-4">Add or read
+          the comments about the {{ technology.technology_name}}</a>
+
+
       </div>
 
     </div>
@@ -88,6 +92,9 @@
 </div>
 
 {% endfor %}
+{% else %}
+        <h3 class="red-text text-darken-4 center-align">No Results Found</h3>
+{% endif %}
 
 
 {% endblock  %}
