--- a/templates/manage_categories.html
+++ b/templates/manage_categories.html
@@ -11,13 +11,13 @@
         <div class="collapsible-header purple lighten-5"><i class="material-icons">list</i>{{ category.category_name }}
         </div>
         <div class="collapsible-body"><span><a href="{{ url_for('edit_category', category_id=category._id) }}"
-              class="btn-large waves-effect waves-light purple lighten-1"><i class="material-icons right">close</i>Edit
+              class="btn-large waves-effect waves-light purple lighten-1"><i class="material-icons right">edit</i>Edit
               this
               category name</a>
             <a href="#modal{{ category._id }}" class="btn-large waves-effect waves-light purple lighten-1 modal-trigger"><i
                 class="material-icons right">close</i>Delete this category</a></span>
               <a href="{{ url_for('add_technology' )}}" class="btn-large waves-effect waves-light purple lighten-1 "><i
-                  class="material-icons right">close</i>Add a technology</a></span>
+                  class="material-icons right">add_circle_outline</i>Add a technology</a></span>
         </div>
       </li>
       <!--  Delete category modal -->
