Get message to display if no search results found

--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -93,7 +93,7 @@
 
 {% endfor %}
 {% else %}
-        <h3 class="red-text text-darken-4 center-align">No Results Found</h3>
+        <h3 class="red-text text-darken-4 center-align">No Results were Found, please try again</h3>
 {% endif %}
 
 
