--- a/static/css/style.css
+++ b/static/css/style.css
@@ -58,7 +58,7 @@ nav .brand-logo {
 
 
 
-/*-- To space buttons in edit_tcehnologies.html  --*/
+/*-- To space buttons in edit_technologies.html  --*/
 
 .btn-large {
     margin-bottom: 20px;
