add code to fully vaildate email input on registartion

--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,6 +6,8 @@
         <div class="card-panel">
             <h3 class="center-align">
                 {{ username|capitalize }}'s Profile
+            </h3><h3 class="center-align">
+               Member since:  {{ join_date }}
             </h3>
             
         </div>
