--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -64,7 +64,7 @@
 <div class="col s12 m7">
   <div class="card horizontal medium hoverable">
     <div class="card-image">
-      <img src="{{ technology.technology_image }}" alt="">
+      <img class="responsive-img" src="{{ technology.technology_image }}" alt="">
     </div>
     <div class="card-stacked">
       <div class="card-content">
