--- a/templates/base.html
+++ b/templates/base.html
@@ -88,6 +88,7 @@
     <main class="container">
         {% block content %}
         {% endblock %}
+        <button onclick="window.scrollTo(0, 0)">SCROLL TOP</button>
     </main>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
