--- a/templates/registration.html
+++ b/templates/registration.html
@@ -31,7 +31,7 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix purple-text text-darken-3">mail</i>
-                    <input id="email" name="email" type="email" class="validate" placeholder="Email address" required>
+                    <input id="email" name="email" type="email" class="validate" placeholder="Email address" pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$" required>
                     <label for="email">Email</label>
                 </div>
             </div>
