Update background image

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -52,7 +52,7 @@ nav .brand-logo {
 
 .background-img {
     min-height: 100vh;
-    background: url("../images/computer.jpg") no-repeat center center;
+    background: url("../images/tapes.jpg") no-repeat center center;
     background-size: cover;
 }
 
