--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,7 +7,7 @@
             <h3 class="center-align">
                 {{ username|capitalize }}'s Profile
             </h3><h3 class="center-align">
-               Member since:  {{ join_date }}
+               Member since:  {{ membersince }}
             </h3>
             
         </div>
