--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,9 +6,10 @@
         <div class="card-panel">
             <h3 class="center-align">
                 {{ username|capitalize }}'s Profile
-            </h3><h3 class="center-align">
-               Member since:  {{ membersince }}
             </h3>
+            <h5 class="align-left">
+               Member since:  {{ membersince }}
+            </h5>
             
         </div>
     </div>
