--- a/templates/manage_categories.html
+++ b/templates/manage_categories.html
@@ -4,6 +4,21 @@
   <div class="col s12">
     <h4 class="center-align" id="top">{{ page_title }}</h4>
 
+    <!-- Button to add a category -->
+    <div class="row">
+      <div class="col s12 center-align">
+        <a href="{{ url_for('add_category') }}" class="btn-large waves-effect waves-light purple lighten-1">
+          Add a new category to Technostalgia<i class="material-icons right">add_circle_outline</i>
+        </a>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col s12 center-align">
+        <h4>Manage existing categories</h4>
+      </div>
+    </div>
+
 
     <!-- Code for collapsible from  Materialise.com -->
     <ul class="collapsible">
@@ -49,21 +64,8 @@
 
 
 
-    <!-- Button to add a category -->
-    <div class="row">
-      <div class="col s12 center-align">
-        <a href="{{ url_for('add_category') }}" class="btn-large waves-effect waves-light purple lighten-1">
-          Add a new category to Technostalgia<i class="material-icons right">add_circle_outline</i>
-        </a>
-      </div>
-    </div>
+    
   </div>
-</div>
-
-<!-- sticky back-to-top button-->
-<div>
-  <button onclick="topFunction()" id="scrollTop" title="Go to top">Top</button>
-  
 </div>
 
 
@@ -71,6 +73,17 @@
 <div class="row">
   <div class="col s12 m6">
     <h4 class="heading center-align">Manage technologies</h4>
+
+<!-- Button to add a technology -->
+<div class="row">
+  <div class="col s12 center-align">
+    <a href="{{ url_for('add_technology') }}" class="btn-small waves-effect waves-light purple lighten-1">
+      Add a new technology<i class="material-icons right">add_circle_outline</i>
+    </a>
+  </div>
+</div>
+
+
     {% for technology in technologies %}
     <div class="card horizontal">
       <div class="card-stacked">
@@ -118,6 +131,16 @@
   <div class="col s12 m6">
 
     <h4 class="heading center-align">Manage comments</h4>
+
+    <!-- Button to add a comment -->
+<div class="row">
+  <div class="col s12 center-align">
+    <a href="{{ url_for('add_comment') }}" class="btn-small btn tooltipped waves-effect waves-light purple lighten-1" 
+    data-position="top" data-tooltip="Add comments from profile page">
+      Add a comment<i class="material-icons right">add_circle_outline</i></a>
+  </div>
+</div>
+
     {% for comment in comments %}
     <div class="card horizontal">
       <div class="card-stacked">
