Style and size technology cards

--- a/templates/add_technology.html
+++ b/templates/add_technology.html
@@ -48,17 +48,20 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix purple-text text-darken-3">description</i>
-                    <textarea id="technology_description" name="technology_description" minlength="5" maxlength="250"
+                    <textarea id="technology_description" name="technology_description" minlength="5" maxlength="175"
                         placeholder="Brief desciption, less than 250 characters!" class="materialize-textarea validate"
                         required></textarea>
                     <label for="technology_description">Description</label>
                 </div>
             </div>
 
+
+            <a class="btn tooltipped" data-position="bottom" data-tooltip="I am a tooltip">Hover me!</a>
+
             <!-- Input for adding a best bits about the technology -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="material-icons prefix purple-text text-darken-3">thumb_up</i>
+                    <i class="material-icons prefix purple-text text-darken-3"></i>thumb_up</i>
                     <textarea id="best_bits" name="best_bits" minlength="5" maxlength="100"
                         placeholder="What do you love most about this technology?" class="materialize-textarea validate"
                         required></textarea>
