--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
     <header>
 
         <!-- Main navbar using Materialize.com  -->
-        <nav class="nav-extended purple lighten-1">
+        <nav class="nav-extended purple lighten-1" id="page-top">
             <div class="nav-wrapper">
                 <a href="{{ url_for('home') }}" class="brand-logo">Technostalgia</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i
