--- a/templates/comments.html
+++ b/templates/comments.html
@@ -117,7 +117,7 @@
     <a href="{{ url_for('get_technologies') }}" class="btn-large waves-effect waves-light purple lighten-1">Go back and
       browse all the technologies</a>
       <br>
-      <button class="btn-large purple lighten-1" href="#comment-top">Back to top</button>
+      <a class="btn-large purple lighten-1" href="#page-top">Back to top</a>
   </div>
 </div>
 
