--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 
-<div class="row">
+<div class="row" id="technologies-top">
   <div class="col s12">
-    <h4 class="center-align">You can filter your search by keyword or category</h4>
+    <h4 class="center-align" id="technologies-top">You can filter your search by keyword or category</h4>
     
   </div>
 
@@ -89,19 +89,24 @@
 
       </div>
 
+
     </div>
   </div>
 </div>
 
 
-<div class="button-wrapper">
-  <button id="scroll-button" class="btn-small purple lighten-1">Scroll to top</button>
-</div>
 
 {% endfor %}
 {% else %}
         <h3 class="red-text text-darken-4 center-align">No Results were Found, please try again</h3>
 {% endif %}
-
+<div class="row center-align">
+  <div class="col s12">
+    
+      
+        <a class="btn-large purple lighten-1" href="#page-top">Back to top</a>
+      
+  </div>
+</div>
 
 {% endblock  %}
