--- a/templates/comments.html
+++ b/templates/comments.html
@@ -3,7 +3,7 @@
 
 <div class="row">
   <div class="col s12">
-    <h4 class="center-align" id="comment-top" >{{ page_title }}</h4>
+    <h4 class="center-align" id="comment-top">{{ page_title }}</h4>
   </div>
 
   <!-- Card containing technology details -->
@@ -25,7 +25,7 @@
       </div>
     </div>
 
-    <!--  modal -->
+    <!--  Modal -->
     <div id="modal{{ technology._id }}" class="modal">
       <div class="modal-content">
         <h4>Are you sure you want to delete this item?</h4>
@@ -42,7 +42,7 @@
   </div>
 </div>
 
-<!--  form to add a comment -->
+<!-- Form to add a comment -->
 <div class="row">
   <div class="col s12 center-align">
     <h4 class="heading">Add a comment about {{ technology.technology_name }}</h4>
@@ -63,7 +63,7 @@
       </div>
     </div>
 
-    <!--Reset Button-->
+    <!-- Reset Button -->
     <div class="row card-action center-align">
       <div class="col s6">
         <!--Submit Button-->
@@ -86,7 +86,7 @@
   </div>
 </div>
 
-<!--Comments on this technology-->
+<!-- Comments on this technology -->
 {% for comment in comments if comment.technology_name == technology.technology_name %}
 <div class="row">
   <div class="col s12">
@@ -99,10 +99,11 @@
       </div>
     </div>
   </div>
-  </div>
-  {% else %}
-  <!--If no comments-->
-  <div class="row">
+</div>
+{% else %}
+
+<!-- If no comments -->
+<div class="row">
   <div class="col s12 center-align">
     <h3>Noone has added a comment yet - you can be the first!</h3>
     <a href="#add_comment" class="btn-large waves-effect waves-light purple lighten-1"><i
@@ -111,17 +112,14 @@
 </div>
 {% endfor %}
 
-<!--Back to technologies page-->
+<!-- Back to technologies page -->
 <div class="row">
   <div class="col s12 center-align">
     <a href="{{ url_for('get_technologies') }}" class="btn-large waves-effect waves-light purple lighten-1">Go back and
       browse all the technologies</a>
-      <br>
-      <a class="btn-large purple lighten-1" href="#page-top">Back to top</a>
+    <br>
+    <a class="btn-large purple lighten-1" href="#page-top">Back to top</a>
   </div>
 </div>
-
-
-
 </section>
 {% endblock %}
