--- a/templates/edit_category.html
+++ b/templates/edit_category.html
@@ -8,28 +8,28 @@
     <form class="col s12" method="POST" action="{{ url_for('edit_category', category_id=category._id) }}">
         <div class="card-panel">
 
-<!-- Input for adding a category name  -->
+            <!-- Input for adding a category name  -->
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix purple-text text-darken-3">important_devices</i>
                     <input id="category_name" name="category_name" minlength="2" maxlength="100" type="text"
-                        class="validate" value ="{{ category.category_name }}" placeholder="Name" required>
+                        class="validate" value="{{ category.category_name }}" placeholder="Name" required>
                     <label for="category_name">Category to edit</label>
                 </div>
             </div>
 
-
-<!-- Submit button for adding a new category -->
+            <!-- Submit button for adding a new category -->
             <div class="row">
                 <div class="center-align col s6 offset-s3">
                     <button type="submit" class="btn-large waves-effect waves-light purple lighten-1"">
-                        Edit this category's name now! <i class="material-icons right">create</i>
+                        Edit this category's name now! <i class=" material-icons right">create</i>
                     </button>
-<!-- Link as button to cancel and return to manage_categories -->
-                    <a href="{{ url_for('manage_categories') }}" class="btn-large waves-effect waves-light purple lighten-1"">
-                        Cancel<i class="material-icons right">close</i>
-                    </a>
 
+                    <!-- Link as button to cancel and return to manage_categories -->
+                    <a href="{{ url_for('manage_categories') }}"
+                        class="btn-large waves-effect waves-light purple lighten-1"">
+                        Cancel<i class=" material-icons right">close</i>
+                    </a>
                 </div>
             </div>
         </div>
