--- a/templates/manage_categories.html
+++ b/templates/manage_categories.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
+
 <div class="row">
   <div class="col s12">
     <h4 class="center-align" id="top">{{ page_title }}</h4>
@@ -12,13 +13,11 @@
         </a>
       </div>
     </div>
-
     <div class="row">
       <div class="col s12 center-align">
         <h4>Manage existing categories</h4>
       </div>
     </div>
-
 
     <!-- Code for collapsible from  Materialise.com -->
     <ul class="collapsible">
@@ -28,8 +27,7 @@
         </div>
         <div class="collapsible-body"><span><a href="{{ url_for('edit_category', category_id=category._id) }}"
               class="btn-large waves-effect waves-light purple lighten-1"><i class="material-icons right">edit</i>Edit
-              this
-              category name</a>
+              this category name</a>
             <a href="#modal{{ category._id }}"
               class="btn-large waves-effect waves-light purple lighten-1 modal-trigger"><i
                 class="material-icons right">close</i>Delete this category</a></span>
@@ -37,6 +35,7 @@
               class="material-icons right">add_circle_outline</i>Add a technology</a></span>
         </div>
       </li>
+
       <!--  Delete category modal -->
       <div id="modal{{ category._id }}"" class=" modal">
         <div class="modal-content red">
@@ -57,32 +56,24 @@
             safety</a>
         </div>
       </div>
-
       {% endfor %}
     </ul>
-
-
-
-
-    
   </div>
 </div>
-
 
 <!-- List all the technologies on the whole site-->
 <div class="row">
   <div class="col s12 m6">
     <h4 class="heading center-align">Manage technologies</h4>
 
-<!-- Button to add a technology -->
-<div class="row">
-  <div class="col s12 center-align">
-    <a href="{{ url_for('add_technology') }}" class="btn-small waves-effect waves-light purple lighten-1">
-      Add a new technology<i class="material-icons right">add_circle_outline</i>
-    </a>
-  </div>
-</div>
-
+    <!-- Button to add a technology -->
+    <div class="row">
+      <div class="col s12 center-align">
+        <a href="{{ url_for('add_technology') }}" class="btn-small waves-effect waves-light purple lighten-1">
+          Add a new technology<i class="material-icons right">add_circle_outline</i>
+        </a>
+      </div>
+    </div>
 
     {% for technology in technologies %}
     <div class="card horizontal">
@@ -105,6 +96,7 @@
         </div>
       </div>
     </div>
+
     <!--  Delete technology modal -->
     <div id="modal{{ technology._id }}" class="modal">
       <div class="modal-content purple lighten-5">
@@ -113,49 +105,38 @@
       </div>
       <div class="modal-footer center-align purple lighten-5">
         <a href="{{ url_for('delete_technology', technology_id=technology._id) }}"
-          class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">Yes I am
-          certain
-          I
-          want to
+          class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">Yes I am certain I want to
           delete this</a>
         <a href="{{ url_for('manage_categories', technology_id=technology._id) }}"
-          class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">No,
-          return to
-          safety</a>
+          class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">No, return to safety</a>
       </div>
     </div>
-
     {% endfor %}
-
   </div>
-
   <div class="col s12 m6">
-
     <h4 class="heading center-align">Manage comments</h4>
 
     <!-- Button to add a comment -->
-<div class="row">
-  <div class="col s12 center-align">
-    <a href="{{ url_for('add_comment') }}" class="btn-small btn tooltipped waves-effect waves-light purple lighten-1" 
-    data-position="top" data-tooltip="Will go to profile page to add comments">
-      Add a comment<i class="material-icons right">add_circle_outline</i></a>
-  </div>
-</div>
+    <div class="row">
+      <div class="col s12 center-align">
+        <a href="{{ url_for('add_comment') }}"
+          class="btn-small btn tooltipped waves-effect waves-light purple lighten-1" data-position="top"
+          data-tooltip="Will go to profile page to add comments">
+          Add a comment<i class="material-icons right">add_circle_outline</i></a>
+      </div>
+    </div>
 
     {% for comment in comments %}
     <div class="card horizontal">
       <div class="card-stacked">
         <div class="card-content">
-
           <ul>
             <li><b>Technology:</b> {{ comment.technology_name }}</li>
             <li><b>Comment:</b> {{ comment.technology_comment }}</li>
-            <li><b>Added by:</b> {{ comment.author|capitalize }}  </li>
+            <li><b>Added by:</b> {{ comment.author|capitalize }} </li>
             <li><b>Added on:</b> {{ comment.created_on }}</li>
             <li><b>Last editted on:</b> {{ comment.editted_on }}</li>
-
           </ul>
-
         </div>
         <div class="card-action purple lighten-5">
           <a href="{{ url_for('edit_comment', comment_id=comment._id) }}"
@@ -168,6 +149,7 @@
         </div>
       </div>
     </div>
+
     <!--  Delete comment modal -->
     <div id="modal{{ comment._id }}" class="modal">
       <div class="modal-content purple lighten-5">
@@ -176,10 +158,7 @@
       </div>
       <div class="modal-footer center-align purple lighten-5">
         <a href="{{ url_for('delete_comment', comment_id=comment._id) }}"
-          class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">Yes I am
-          certain
-          I
-          want to
+          class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">Yes I am certain I want to
           delete this comment</a>
         <a href="{{ url_for('profile', username=session['user']) }}"
           class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">No,
@@ -190,6 +169,5 @@
 
     {% endfor %}
   </div>
-  
 </div>
 {% endblock %}
