--- a/templates/registration.html
+++ b/templates/registration.html
@@ -2,7 +2,6 @@
 {% block content %}
 
 <h4 class="center-align">{{ page_title }}</h4>
-
 <div class="row">
     <form class="col s12 m8 offset-m2" method="POST" action="{{ url_for('registration') }}">
         <div class="card-panel">
@@ -31,7 +30,8 @@
             <div class="row">
                 <div class="input-field col s12">
                     <i class="material-icons prefix purple-text text-darken-3">mail</i>
-                    <input id="email" name="email" type="email" class="validate" placeholder="Email address" pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$" required>
+                    <input id="email" name="email" type="email" class="validate" placeholder="Email address"
+                        pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$" required>
                     <label for="email">Email</label>
                 </div>
             </div>
@@ -73,12 +73,10 @@
                         Register<i class="material-icons right">forward</i>
                     </button>
                     <p>If you have already joined us you can <a href="{{ url_for('login') }}"
-                        class="btn-small waves-effect waves-light purple lighten-1">Log in Here</a></p>
-
+                            class="btn-small waves-effect waves-light purple lighten-1">Log in Here</a></p>
                 </div>
             </div>
         </div>
     </form>
 </div>
-
 {% endblock %}
