--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -1,13 +1,10 @@
 {% extends "base.html" %}
-
 {% block content %}
 
 <div class="row" id="technologies-top">
   <div class="col s12">
     <h4 class="center-align" id="technologies-top">You can filter your search by keyword or category</h4>
-    
   </div>
-
 </div>
 
 <!-- Code for search box  -->
@@ -20,8 +17,6 @@
         <label for="query">Search by keyword</label>
       </div>
     </div>
-
-
     <div class="row">
       <div class="col s12 m8">
         <h5>or</h5>
@@ -40,13 +35,9 @@
         </select>
       </div>
     </div>
-
-
     <div class="row">
-
       <!-- Search and reset buttons  -->
       <div class="col s12 center-align">
-
         <button type="submit" class="btn-small purple lighten-1"><i class="material-icons right">search</i>
           Search
         </button>
@@ -56,7 +47,6 @@
     </div>
   </form>
 </div>
-
 
 {% if technologies|length > 0 %}
 
@@ -71,42 +61,29 @@
     <div class="card-stacked">
       <div class="card-content">
         <ul>
-          <li><strong>Category: {{ technology.category_name }}</strong></li>
-          <li>Name: {{ technology.technology_name }}</li>
-          <li>Description: {{ technology.technology_description }}</li>
-          <li>Best bits: {{ technology.best_bits }}</li>
-          <li>Worst bits: {{ technology.worst_bits }}</li>
-          <li>Added by: {{ technology.added_by|capitalize }}</li>
-          <li>Added on: {{ technology.added_on }}</li>
-
+          <li><b>Category:</b> {{ technology.category_name }}</strong></li>
+          <li><b>Name:</b> {{ technology.technology_name }}</li>
+          <li><b>Description:</b> {{ technology.technology_description }}</li>
+          <li><b>Best bits:</b> {{ technology.best_bits }}</li>
+          <li><b>Worst bits:</b> {{ technology.worst_bits }}</li>
+          <li><b>Added by: </b>{{ technology.added_by|capitalize }}</li>
+          <li><b>Added on:</b> {{ technology.added_on }}</li>
         </ul>
       </div>
       <div class="card-action">
-
         <a href="{{ url_for('comments', technology_id=technology._id) }}" class="purple-text text-darken-4">Add or read
-          the comments about the {{ technology.technology_name}}</a>
-
-
+          comments about the {{ technology.technology_name}}</a>
       </div>
-
-
     </div>
   </div>
 </div>
-
-
-
 {% endfor %}
 {% else %}
-        <h3 class="red-text text-darken-4 center-align">No Results were Found, please try again</h3>
+<h3 class="red-text text-darken-4 center-align">No Results were Found, please try again</h3>
 {% endif %}
 <div class="row center-align">
   <div class="col s12">
-    
-      
-        <a class="btn-large purple lighten-1" href="#page-top">Back to top</a>
-      
+    <a class="btn-large purple lighten-1" href="#page-top">Back to top</a>
   </div>
 </div>
-
 {% endblock  %}
