--- a/templates/manage_categories.html
+++ b/templates/manage_categories.html
@@ -31,8 +31,6 @@
             <a href="#modal{{ category._id }}"
               class="btn-large waves-effect waves-light purple lighten-1 modal-trigger"><i
                 class="material-icons right">close</i>Delete this category</a></span>
-          <a href="{{ url_for('add_technology' )}}" class="btn-large waves-effect waves-light purple lighten-1 "><i
-              class="material-icons right">add_circle_outline</i>Add a technology</a></span>
         </div>
       </li>
 
@@ -63,7 +61,7 @@
 
 <!-- List all the technologies on the whole site-->
 <div class="row">
-  <div class="col s12 m6">
+  <div class="col s12 m6 center-align">
     <h4 class="heading center-align">Manage technologies</h4>
 
     <!-- Button to add a technology -->
@@ -112,8 +110,10 @@
       </div>
     </div>
     {% endfor %}
+    <a class="btn-large purple lighten-1" href="#page-top">Back to top</a>
   </div>
-  <div class="col s12 m6">
+
+    <div class="col s12 m6 center-align">
     <h4 class="heading center-align">Manage comments</h4>
 
     <!-- Button to add a comment -->
@@ -168,6 +168,7 @@
     </div>
 
     {% endfor %}
+    <a class="btn-large purple lighten-1" href="#page-top">Back to top</a>
   </div>
 </div>
 {% endblock %}
