Fix bug that not all fields were rewritten to databse when editted

--- a/templates/add_technology.html
+++ b/templates/add_technology.html
@@ -58,7 +58,7 @@
             <!-- Input for adding a best bits about the technology -->
             <div class="row">
                 <div class="input-field col s12">
-                    <i class="material-icons prefix purple-text text-darken-3"></i>thumb_up</i>
+                    <i class="material-icons prefix purple-text text-darken-3">thumb_up</i>
                     <textarea id="best_bits" name="best_bits" minlength="5" maxlength="50"
                         placeholder="Keep it REALLY short (max 50 characters!)" class="materialize-textarea validate"
                         required></textarea>
