--- a/templates/profile.html
+++ b/templates/profile.html
@@ -8,8 +8,8 @@
                 {{ username|capitalize }}'s Profile
             </h3>
             <h5 class="align-left">
-               Member since:  {{ membersince }}
-            </h5>         
+                Member since: {{ membersince }}
+            </h5>
         </div>
     </div>
 </div>
@@ -27,6 +27,7 @@
                         <li><b>Category:</b>{{ technology.category_name }}</li>
                         <li><b>Name:</b> {{ technology.technology_name }}</li>
                         <li><b>Added by you on :</b> {{ technology.added_on }}</li>
+                        <li><b>Last editted on:</b> {{ technology.editted_on }}</li>
                     </ul>
                 </div>
                 <div class="card-action purple lighten-5">
@@ -37,7 +38,8 @@
                         href="#modal{{ technology._id }}"><i class="material-icons right">close</i>Delete
                         this technology</a>
                     <a class="waves-effect waves-light  btn-small purple lighten-1 align-right modal-trigger"
-                        href="{{ url_for('comments', technology_id=technology._id) }}"><i class="material-icons right">add_circle_outline</i>Add a comment</a>
+                        href="{{ url_for('comments', technology_id=technology._id) }}"><i
+                            class="material-icons right">add_circle_outline</i>Add a comment</a>
                 </div>
             </div>
         </div>
@@ -50,9 +52,11 @@
             </div>
             <div class="modal-footer center-align purple lighten-5">
                 <a href="{{ url_for('delete_technology', technology_id=technology._id) }}"
-                    class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">Yes I am certain I want to delete this</a>
+                    class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">Yes I am certain
+                    I want to delete this</a>
                 <a href="{{ url_for('get_technologies', technology_id=technology._id) }}"
-                    class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">No, return to safety</a>
+                    class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">No, return to
+                    safety</a>
             </div>
         </div>
 
@@ -96,7 +100,8 @@
             </div>
             <div class="modal-footer center-align purple lighten-5">
                 <a href="{{ url_for('delete_comment', comment_id=comment._id) }}"
-                    class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">Yes I am certain I want to delete this comment</a>
+                    class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">Yes I am certain
+                    I want to delete this comment</a>
                 <a href="{{ url_for('profile', username=session['user']) }}"
                     class="modal-close waves-effect waves-light btn-small purple lighten-1 align-right">No,
                     return to
