--- a/templates/manage_categories.html
+++ b/templates/manage_categories.html
@@ -110,7 +110,7 @@
       </div>
     </div>
     {% endfor %}
-    <a class="btn-large purple lighten-1" href="#page-top">Back to top</a>
+   
   </div>
 
     <div class="col s12 m6 center-align">
@@ -168,7 +168,13 @@
     </div>
 
     {% endfor %}
-    <a class="btn-large purple lighten-1" href="#page-top">Back to top</a>
+
+    
+    
+    <a class="btn-large purple lighten-1" id="scroll-button" href="#page-top">Back to top</a>
+  
+
+
   </div>
 </div>
 {% endblock %}
