--- a/templates/technologies.html
+++ b/templates/technologies.html
@@ -81,9 +81,7 @@
 {% else %}
 <h3 class="red-text text-darken-4 center-align">No Results were Found, please try again</h3>
 {% endif %}
-<div class="row center-align">
-  <div class="col s12">
-    <a class="btn-large purple lighten-1" href="#page-top">Back to top</a>
-  </div>
-</div>
+
+    <a class="btn-large purple lighten-1" id="tech-scroll" href="#page-top">Back to top</a>
+  
 {% endblock  %}
