Tidy manage_categories html

--- a/templates/manage_categories.html
+++ b/templates/manage_categories.html
@@ -168,13 +168,9 @@
     </div>
 
     {% endfor %}
-
-    
     
     <a class="btn-large purple lighten-1" id="scroll-button" href="#page-top">Back to top</a>
   
-
-
   </div>
 </div>
-{% endblock %}
+{% endblock %
