--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,7 +11,6 @@ body {
 }
 
 
-
 .flashes h4 {
     line-height: 1.5;
 }
@@ -31,6 +30,12 @@ body {
     color: #fff;
 }
 
+.page-topper  {
+    font-family: 'Press Start 2P', cursive;
+    font-size: 3rem;
+    margin: 100px 0;
+}
+
 /*-- Backgorund colour of sidenav to match site --*/
 
 .sidenav {
@@ -42,17 +47,7 @@ nav .brand-logo {
     font-family: 'Ubuntu Mono', monospace;
     font-size: 2rem;
     margin: 0px 50px;
-    
- 
 }
-
-.page-topper  {
-    font-family: 'Press Start 2P', cursive;
-    font-size: 3rem;
-    margin: 100px 0;
- 
-}
-
 
 /*-- Code snippet from https://css-tricks.com/perfect-full-page-background-image/ vendor extensions removed for this project --*/
 
@@ -62,9 +57,7 @@ nav .brand-logo {
     background-size: cover;
 }
 
-
-
-/*-- To space buttons in edit_technologies.html  --*/
+/*-- To space buttons  --*/
 
 .btn-large {
     margin-bottom: 20px;
@@ -74,7 +67,7 @@ nav .brand-logo {
     margin-bottom: 5px;
 }
  
-
+/*-- To creat sticky back-to-top buttons  --*/
 #scroll-button {
     position: sticky;
     bottom: 0;
