--- a/templates/comments.html
+++ b/templates/comments.html
@@ -105,9 +105,9 @@
 <!-- If no comments -->
 <div class="row">
   <div class="col s12 center-align">
-    <h3>Noone has added a comment yet - you can be the first!</h3>
-    <a href="#add_comment" class="btn-large waves-effect waves-light purple lighten-1"><i
-        class="material-icons">add_circle_outline</i>Add the first comment</a>
+    <h2>No one has added a comment yet - you can be the first!</h2>
+    <button class="btn-large waves-effect waves-light purple lighten-1 tooltipped" data-position="top" data-tooltip="You can add comments from the technology's card"><a class="white-text" href="{{ url_for('get_technologies') }}" >Add the first comment<i
+      class="material-icons prefix">add_circle_outline</i></a></button>
   </div>
 </div>
 {% endfor %}
@@ -115,7 +115,7 @@
 <!-- Back to technologies page -->
 <div class="row">
   <div class="col s12 center-align">
-    <a href="{{ url_for('get_technologies') }}" class="btn-large waves-effect waves-light purple lighten-1">Go back and
+<a href="{{ url_for('get_technologies') }}" class="btn-large waves-effect waves-light purple lighten-1 " >Go back and
       browse all the technologies</a>
     <br>
     <a class="btn-large purple lighten-1" href="#page-top">Back to top</a>
