Disable technology name button in edit_technology

--- a/templates/comments.html
+++ b/templates/comments.html
@@ -105,7 +105,8 @@
 <!-- If no comments -->
 <div class="row">
   <div class="col s12 center-align">
-    <h4>No one has added a comment yet - you can be the first!</h4>
+    <h4>No one has added a comment yet - you can be the first!</h4
+      >
     <button class="btn-large waves-effect waves-light purple lighten-1 tooltipped" data-position="top" data-tooltip="You can add comments from the technology's card"><a class="white-text" href="{{ url_for('get_technologies') }}" >Add the first comment<i
       class="material-icons prefix">add_circle_outline</i></a></button>
   </div>
